2019-08-06  Pattarawut Imamnuaysup  <pattarawut@hot-now.com>
 Add a return for status condition control when an if condition fails without else condition

2019-04-11  Kirit Saelensminde  <kirit@felspar.com>
 Add JSON directory listing view and ability to choose directory listing view for the static file server.

2019-04-09  Kirit Saelensminde  <kirit@felspar.com>
 * The web server takes a `-C` option which changes its current directory
 * Text files ('text/` Content-Type) are served as UTF8.

2019-03-05  Kirit Saelensminde  <kirit@felspar.com>
 The `test.throw` view now allows new exception throwers to be added.

2019-01-23  Kirit Saelensminde  <kirit@felspar.com>
 Add `test.throw` view to help with testing and `control.exception.catch` for running alternative views when exceptions are thrown.

2019-01-09  Sem  <cloudtimewater@gmail.com>
 Fix fost.proxy.transparent. Pass the correct path.

2018-12-26  Tle Ekkul  <e.aryuth@gmail.com>
 Add fost.control.status-condition view

2018-12-20  Tle Ekkul  <e.aryuth@gmail.com>
 Add fost.schema.validate view

2018-05-20  Kirit Saelensminde  <kirit@felspar.com>
 Add a pathname view and a file serving view.

2017-07-11  Kirit Saelensminde  <kirit@felspar.com>
 The template middleware now uses the headers from the wrapped view instead of throwing them away.

2017-06-27  Kirit Saelensminde  <kirit@felspar.com>
 Logging middleware also records the processing duration.

2017-01-03  Kirit Saelensminde  <kirit@felspar.com>
 Log better information about failed HTTP requests to the server.

2016-11-03  Kirit Saelensminde  <kirit@felspar.com>
 Load shared objects before setting up the logger so that optional loggers can be loaded.

2016-10-08  Kirit Saelensminde  <kirit@felspar.com>
 * Add a generic 200 response.
 * Web view execution now gives a stack trace when an exception is thrown.

2016-09-23  Kirit Saelensminde  <kirit@felspar.com>
 * Improved error output where a view name is misconfigured.